<resources>
    <string name="msg_error_no_connection">Tidak ada koneksi internet</string>
    <string name="msg_error_global">Terjadi kesalahan saat memuat data</string>
    <string name="msg_empty_global">Tidak ditemukan ada data</string>
    <string name="msg_loading_global">Loading..</string>
    <string name="btn_retry">Coba lagi</string>

    <!-- Custom string -->
    <string name="app_name">Uebermaps</string>
    <string name="label_account">Account</string>
    <string name="label_notif">Notification</string>
    <string name="label_explore">Explore</string>
    <string name="label_see_all">See All</string>
    <string name="hint_username">Username / Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">Login</string>
    <string name="prompt_please_login">Login to create &amp; share your own maps with your favorite spots!</string>
    <string name="btn_logout">Logout</string>
    <string name="label_recommended">Recommended</string>
    <string name="label_latest">Latest trends</string>
    <string name="label_my_maps">My Uebermaps</string>
    <string name="msg_empty_my_maps">You haven\'t added your own maps</string>
    <string name="add_my_map">Add my map</string>
    <string name="msg_loading_map_detail">Loading map..</string>
    <string name="label_spots">Spots</string>
    <string name="label_media">Media</string>
    <string name="label_comment">Comments</string>
    <string name="msg_empty_spot">No spots found on this map</string>
    <string name="format_label_map_type">%s Map</string>
    <string name="format_label_count_spots">%s Spots</string>
    <string name="format_label_count_views">%s Views</string>
    <string name="msg_empty_media">No media found</string>
    <string name="label_loading">Loading</string>
    <string name="btn_edit_profile">Edit Profile</string>
    <string name="btn_edit_password">Edit Password</string>
    <string name="format_username">\@\%s</string>
    <string name="msg_confirm_logout">Are you sure you want to logout?</string>
    <string name="dialog_action_yes">Yes</string>
    <string name="dialog_action_no">No</string>
    <string name="prompt_text_login">You need to login to see this feature ^-^</string>
    <string name="msg_loading_logout">Logging you out..</string>
    <string name="msg_empty_latest_trends">Latest trends map not found</string>
    <string name="msg_empty_recommended">Recommended map not found</string>
</resources>