<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_menu_navigation"
    app:startDestination="@id/homeFragment">
    <fragment
        android:id="@+id/homeFragment"
        android:name="id.widiarifki.uebermaps.presentation.home.HomeFragment"
        android:label="@string/label_explore"
        tools:layout="@layout/fragment_home">
    </fragment>
    <fragment
        android:id="@+id/notifFragment"
        android:name="id.widiarifki.uebermaps.presentation.notif.NotifFragment"
        android:label="@string/label_notif"
        tools:layout="@layout/fragment_notif"/>
    <fragment
        android:id="@+id/accountFragment"
        android:name="id.widiarifki.uebermaps.presentation.account.AccountFragment"
        android:label="@string/label_account"
        tools:layout="@layout/fragment_account"/>
    <fragment
        android:id="@+id/authFragment"
        android:name="id.widiarifki.uebermaps.presentation.auth.AuthFragment"
        android:label="AuthFragment"
        tools:layout="@layout/fragment_auth"/>
</navigation>