<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <import type="android.view.View"/>
        <variable
            name="viewModel"
            type="id.widiarifki.uebermaps.presentation.login.LoginViewModel" />
    </data>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:padding="@dimen/_20sdp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            style="@style/TextAppearance.AppCompat.Large"
            android:layout_marginBottom="@dimen/_8sdp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/prompt_please_login"
            android:layout_marginBottom="@dimen/_20sdp"/>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fieldUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_username">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={viewModel.fieldUsername}"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fieldPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:text="@={viewModel.fieldPassword}"/>
        </com.google.android.material.textfield.TextInputLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/btnLogin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_login"
                android:onClick="@{viewModel.actionLogin}"
                android:visibility="@{viewModel.loginState.isLoading ? View.INVISIBLE : View.VISIBLE, default=visible}"/>
            <ProgressBar
                app:layout_constraintStart_toStartOf="@id/btnLogin"
                app:layout_constraintEnd_toEndOf="@id/btnLogin"
                app:layout_constraintTop_toTopOf="@id/btnLogin"
                app:layout_constraintBottom_toBottomOf="@id/btnLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="@{viewModel.loginState.isLoading ? View.VISIBLE : View.GONE, default=visible}"
                style="@android:style/Widget.ProgressBar.Small"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</layout>